# AIOS

./: .gitignore  AIOS-五团队并行开发分工方案.md  AIOS-团队1-Backlog-控制面与Provider编排团队.md  AIOS-团队1-控制面与Provider编排团队.md  AIOS-团队2-Backlog-运行时与推理后端团队.md  AIOS-团队2-运行时与推理后端团队.md  AIOS-团队3-Backlog-设备与多模态团队.md  AIOS-团队3-设备与多模态团队.md  AIOS-团队4-Backlog-Shell与交互界面团队.md  AIOS-团队4-Shell与交互界面团队.md  AIOS-团队5-Backlog-平台交付与兼容生态团队.md  AIOS-团队5-平台交付与兼容生态团队.md  AIOS-审查报告.md  AIOS-开发方案.md  AIOS-战略分析报告.md  CHANGELOG.md  requirements.txt  五团队并行开发总计划.md  团队A-平台交付与更新恢复计划书.md  团队B-核心控制面与安全治理计划书.md  团队C-Shell与Portal交互计划书.md  团队D-设备ProviderCompat执行计划书.md  团队E-验证观测与发布治理计划书.md  项目缺失清单.md
aios/: .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
aios/.claude/: context-summary-office-local-full.md  operations-log.md  verification-report.md
aios/adr/: ADR-0001-linux-first-image-based.md  ADR-0002-cognitive-kernel.md  ADR-0003-provider-registry-and-portal.md  ADR-0004-baseline-vs-conditional-capabilities.md  ADR-0005-core-local-ipc-before-bridges.md  ADR-0006-shell-stack.md  ADR-0007-update-stack.md  ADR-0008-sandbox-engine.md  ADR-0009-memory-backend.md  ADR-0010-core-rpc-wire-contract.md  README.md
aios/compat/: README.md  remote_runtime_support.py  runtime_support.py
aios/compat/audit-query/: README.md
aios/compat/browser/: README.md
aios/compat/code-sandbox/: README.md
aios/compat/mcp-bridge/: README.md
aios/compat/office/: README.md
aios/crates/aios-contracts/: Cargo.toml
aios/crates/aios-core/: Cargo.toml
aios/crates/aios-portal/: Cargo.toml  README.md
aios/crates/aios-provider-registry/: Cargo.toml  README.md
aios/crates/aios-rpc/: Cargo.toml
aios/delivery/: README.md
aios/docs/: README.md
aios/hardware/: README.md  tier1-nominated-machines.yaml
aios/hardware/evidence/: README.md  qemu-x86_64-validation-evidence.yaml
aios/hardware/profiles/: framework-laptop-13-amd-7040.yaml  qemu-x86_64.yaml  tier1-template.yaml
aios/hardware/schemas/: hardware-validation-evidence-index.schema.json
aios/image/: README.md  mkosi.conf
aios/image/boot/: README.md
aios/image/firstboot/: README.md  aios-ai-onboarding.service  aios-ai-onboarding.sh  aios-firstboot.env  aios-firstboot.sh
aios/image/installer/: README.md  aios-installer.env  profile.yaml
aios/image/recovery/: README.md  aios-recovery-report.sh  aios-recovery-shell.service  aios-recovery.target  kernel-command-line.txt
aios/image/repart.d/: 00-esp.conf  10-root.conf  20-var.conf
aios/image/sandbox/: aios-sandbox-policy.yaml
aios/image/selinux/: aios-services.fc  aios-services.te
aios/image/sysupdate.d/: 00-aios-root.transfer
aios/legacy/: README.md
aios/legacy/cli/: README.md
aios/legacy/client/: README.md
aios/legacy/daemon/: README.md
aios/observability/: FIELD_MAPPING.md  README.md  SCHEMA_VERSIONING.md
aios/observability/samples/: audit-event.sample.json  audit-evidence-report.sample.json  cross-service-correlation-report.sample.json  cross-service-health-report.sample.json  diagnostic-bundle.sample.json  evidence-index.sample.json  full-regression-report.sample.json  health-event.sample.json  recovery-evidence.sample.json  release-gate-report.sample.json  trace-event.sample.json  validation-report.sample.json
aios/observability/schemas/: audit-event.schema.json  audit-evidence-report.schema.json  diagnostic-bundle.schema.json  evidence-index.schema.json  full-regression-report.schema.json  health-event.schema.json  recovery-evidence.schema.json  release-gate-report.schema.json  trace-event.schema.json  validation-report.schema.json
aios/policy/: README.md
aios/policy/capabilities/: README.md  default-capability-catalog.yaml
aios/policy/profiles/: default-policy.yaml
aios/policy/schemas/: execution-token.schema.json
aios/providers/: README.md
aios/providers/device-metadata/: Cargo.toml  README.md
aios/providers/runtime-local-inference/: Cargo.toml  README.md  service.yaml
aios/providers/system-files/: Cargo.toml  README.md  service.yaml
aios/providers/system-intent/: Cargo.toml  README.md
aios/runtime/: README.md  gpu-backend-support-matrix.yaml  model_manager.py  recommended-model-catalog.yaml
aios/runtime/profiles/: default-runtime-profile.yaml  worker-integration-profile.yaml
aios/runtime/schemas/: runtime-embed.request.schema.json  runtime-profile.schema.json  runtime-rerank.request.schema.json  runtime-worker.response.schema.json
aios/runtime/workers/: launch_local_cpu_worker.sh  local_cpu_worker.py
aios/scripts/integration/: saas-smoke.mjs
aios/scripts/office-ui/: office-smoke.mjs
aios/sdk/: README.md
aios/sdk/providers/: device.metadata.local.json  system-files.local.json  system-intent.local.json
aios/sdk/schemas/: compat-audit-query-result.schema.json  compat-mcp-bridge-result.schema.json  compat-permission-manifest.schema.json  device-metadata-get.request.schema.json  device-metadata-get.response.schema.json  intent.request.schema.json  portal-handle.schema.json  provider-descriptor.schema.json  provider-remote-registry.schema.json  shell-operator-audit-open.schema.json  shell-panel-events-list.request.schema.json
aios/services/: README.md
aios/services/agentd/: Cargo.toml  README.md  service.yaml
aios/services/deviced/: Cargo.toml  README.md  service.yaml
aios/services/policyd/: Cargo.toml  README.md  service.yaml
aios/services/runtimed/: Cargo.toml  README.md  service.yaml
aios/services/sessiond/: Cargo.toml  README.md  service.yaml
aios/services/updated/: Cargo.toml  README.md  service.yaml
aios/shell/: ACCEPTANCE.md  PORTAL_FLOW.md  README.md  shellctl.py
aios/shell/components/: README.md
aios/shell/compositor/: Cargo.toml  default-compositor.conf  release-compositor.conf
aios/shell/profiles/: default-shell-profile.yaml  formal-shell-profile.yaml  release-shell-profile.yaml
aios/shell/providers/: screen-capture.portal.json
aios/shell/runtime/: screen_capture_portal_provider.py  shell_control_provider.py  shell_panel_bridge_service.py  (+3 more)
aios/tasks/: README.md  execution-board.yaml
(+708 files in other folders)
