[workspace]
resolver = "2"
members = [
  "crates/aios-core",
  "crates/aios-contracts",
  "crates/aios-rpc",
  "crates/aios-provider-registry",
  "crates/aios-portal",
  "services/agentd",
  "services/deviced",
  "services/policyd",
  "services/runtimed",
  "services/sessiond",
  "services/updated",
  "providers/device-metadata",
  "providers/runtime-local-inference",
  "providers/system-intent",
  "providers/system-files",
]
default-members = [
  "services/agentd",
  "services/deviced",
  "services/policyd",
  "services/runtimed",
  "services/sessiond",
  "services/updated",
  "providers/device-metadata",
  "providers/runtime-local-inference",
  "providers/system-intent",
  "providers/system-files",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
jsonschema = { version = "0.18", features = ["draft202012"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
