[package]
name = "aios-portal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aios-contracts = { path = "../aios-contracts" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
