[package]
name = "aios-provider-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aios-contracts = { path = "../aios-contracts" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
