[package]
name = "aios-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aios-core = { path = "../aios-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
