[package]
name = "aios-agentd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "agentd"
path = "src/main.rs"

[dependencies]
aios-contracts = { path = "../../crates/aios-contracts" }
aios-core = { path = "../../crates/aios-core" }
aios-provider-registry = { path = "../../crates/aios-provider-registry" }
aios-rpc = { path = "../../crates/aios-rpc" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
