[package]
name = "aios-shell-compositor"
version = "0.1.1"
edition = "2021"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "aios-shell-compositor"
path = "src/main.rs"

[target.'cfg(target_os = "linux")'.dependencies]
smithay = { version = "0.7.0", default-features = false, features = ["backend_drm", "backend_gbm", "backend_libinput", "backend_session_libseat", "backend_udev", "backend_winit", "renderer_gl", "wayland_frontend"] }

[workspace]
